...
import javax.inject.Inject
import android.util.Log
import com.cpen321.usermanagement.data.repository.ProfileRepository
import com.cpen321.usermanagement.ui.components.FieldTypeDialog

enum class FieldType {
    TEXT,
    DATETIME,
    SIGNATURE
}

data class FieldCreationData(
    val id: String = UUID.randomUUID().toString(),
...
